--- a/Stories/Twine Tutorial.html
+++ b/Stories/Twine Tutorial.html
@@ -130,7 +130,14 @@ you dance with the angel in your closet
 you sharped a pair of poointed toe boots
 
 
-</tw-passagedata><tw-passagedata pid="2" name="Start" tags="" position="475,450" size="100,100">Twine tutorials
+You were in blue.
+
+i think i need to start with oh there you are
+i was beginning to think you might not wake up
+or something like that and then do the intro afterwards
+ should it more be like milk inside see idk yet
+ i think i want it to be vague
+ what is the story tho i think its about compagin ship, frienship, no just having someone there even when u have no one</tw-passagedata><tw-passagedata pid="2" name="Start" tags="" position="475,450" size="100,100">Twine tutorials
 points: $points
 fog:$fog
 
